[tool.poetry]
name = "airbyte-api-wrapper"
version = "0.1.0"
description = "Python API wrapper para Airbyte"
authors = ["Kemok <admin_producto@kemok.io>"]
readme = "README.md"
license = "MIT"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
behave = "^1.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
